--- a/members.html
+++ b/members.html
@@ -3,241 +3,250 @@
 <!--[if !IE]><!-->
 <html lang="en">
 <!--<![endif]-->
-	<head>
-		<meta charset="utf-8">
-		<title>Goverment ITI</title>
-		<meta name="description" content="Responsive HTML5 Template">
-		<meta name="author" content="webthemez">
 
-		<!-- Mobile Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="images/iti_logo.jpg">
-		<link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
-		<link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet"> 
-		<link href="css/animations.css" rel="stylesheet"> 
-		<link href="css/style.css" rel="stylesheet"> 
-		<link href="css/custom.css" rel="stylesheet">
-	</head>
+<head>
+	<meta charset="utf-8">
+	<title>Goverment ITI</title>
+	<meta name="description" content="Responsive HTML5 Template">
+	<meta name="author" content="webthemez">
+
+	<!-- Mobile Meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="images/iti_logo.jpg">
+	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+	<link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
+	<link href="css/animations.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<link href="css/custom.css" rel="stylesheet">
+</head>
 
 
-	<body class="no-trans">
-		<!-- scrollToTop --> 
-		<div class="scrollToTop"><i class="icon-up-open-big"></i></div>
+<body class="no-trans">
+	<!-- scrollToTop -->
+	<div class="scrollToTop"><i class="icon-up-open-big"></i></div>
 
-		<!-- header start --> 
-		<header class="header fixed clearfix navbar navbar-fixed-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
+	<!-- header start -->
+	<header class="header fixed clearfix navbar navbar-fixed-top">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
 
-						<!-- header-left start --> 
-						<div class="header-left">
+					<!-- header-left start -->
+					<div class="header-left">
 
-							<!-- logo -->
-							<div class="logo smooth-scroll">
-								<a href="#banner"><img id="logo" src="images/logo.jpg" alt="Worthy" style="max-height: 65px;margin-right: 3px;"></a>
-							</div>
-
-							<!-- name-and-slogan -->
-							<div class="logo-section smooth-scroll">
-								<div class="brand"><a href="#banner">Goverment ITI</a></div>								
-							</div>
+						<!-- logo -->
+						<div class="logo smooth-scroll">
+							<a href="#banner"><img id="logo" src="images/logo.jpg" alt="Worthy"
+									style="max-height: 65px;margin-right: 3px;"></a>
 						</div>
-						<!-- header-left end -->
 
+						<!-- name-and-slogan -->
+						<div class="logo-section smooth-scroll">
+							<div class="brand"><a href="#banner">Goverment ITI</a></div>
+						</div>
 					</div>
-					<div class="col-md-8">
+					<!-- header-left end -->
 
-						<!-- header-right start --> 
-						<div class="header-right">
+				</div>
+				<div class="col-md-8">
 
-							<!-- main-navigation start --> 
-							<div class="main-navigation animated">
-								<!-- navbar start --> 
-								<nav class="navbar navbar-default" role="navigation">
-									<div class="container-fluid">
+					<!-- header-right start -->
+					<div class="header-right">
 
-										<!-- Toggle get grouped for better mobile display -->
-										<div class="navbar-header">
-											<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-												<span class="sr-only">Toggle navigation</span>
-												<span class="icon-bar"></span>
-												<span class="icon-bar"></span>
-												<span class="icon-bar"></span>
-											</button>
-										</div>
-										<!-- Collect the nav links, forms, and other content for toggling -->
-										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
-											<ul class="nav navbar-nav navbar-right">
-												<li><a href="index.html">Home</a></li>
-												<!-- <li><a href="#services">We Offer</a></li>
-												<li><a href="#about">About Us</a></li> -->
-												<li  class="active"><a href="members.html"target="_blank">Members</a></li>
-												<li><a href="galary.html"target="_blank">Gallery</a></li>
-												<li><a href="courses.html"target="_blank">Courses</a></li>												
-												<li><a href="contects.html"target="_blank">Contact Us</a></li>
-											</ul>
-										</div>
+						<!-- main-navigation start -->
+						<div class="main-navigation animated">
+							<!-- navbar start -->
+							<nav class="navbar navbar-default" role="navigation">
+								<div class="container-fluid">
 
+									<!-- Toggle get grouped for better mobile display -->
+									<div class="navbar-header">
+										<button type="button" class="navbar-toggle" data-toggle="collapse"
+											data-target="#navbar-collapse-1">
+											<span class="sr-only">Toggle navigation</span>
+											<span class="icon-bar"></span>
+											<span class="icon-bar"></span>
+											<span class="icon-bar"></span>
+										</button>
 									</div>
-								</nav>
-								<!-- navbar end -->
+									<!-- Collect the nav links, forms, and other content for toggling -->
+									<div class="collapse navbar-collapse scrollspy smooth-scroll"
+										id="navbar-collapse-1">
+										<ul class="nav navbar-nav navbar-right">
+											<li><a href="index.html">Home</a></li>
+											<!-- <li><a href="#services">We Offer</a></li>
+												<li><a href="#about">About Us</a></li> -->
+											<li class="active"><a href="members.html" >Members</a></li>
+											<li><a href="galary.html" >Gallery</a></li>
+											<li><a href="courses.html" >Courses</a></li>
+											<li><a href="contects.html" >Contact Us</a></li>
+										</ul>
+									</div>
 
-							</div>
-							<!-- main-navigation end -->
+								</div>
+							</nav>
+							<!-- navbar end -->
 
 						</div>
-						<!-- header-right end -->
+						<!-- main-navigation end -->
 
 					</div>
+					<!-- header-right end -->
+
 				</div>
 			</div>
-		</header>
-		<!-- header end -->
+		</div>
+	</header>
+	<!-- header end -->
 
-		<div class="default-bg colord secPadding"><br>
-			<div class="container" style="margin-top:80px;">
-				<h1 class="our-gal">Our members</h1>
-				<table class="table table-bordered" style="background-color: white; color:black">
-					<thead>
-					  <tr>
+	<div class="default-bg colord secPadding"><br>
+		<div class="container" style="margin-top:80px;">
+			<h1 class="our-gal">Our members</h1>
+			<table class="table table-bordered" style="background-color: white; color:black">
+				<thead>
+					<tr>
 						<th scope="col">S.No</th>
 						<th scope="col">IMC</th>
 						<th scope="col">Name of member</th>
 						<th scope="col">Additional information about the member
 						</th>
-					  </tr>
-					</thead>
-					<tbody>
-					  <tr>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
 						<th scope="row">1</th>
 						<td>Chairman
 						</td>
-						<td>Mr.S.Dakchinamoorthy</td>
-						<td>Vice President, India cements, Sankarnagar, Tirunelveli
+						<td>Mr.K.Saravanamuthu</td>
+						<td>Deputy general Manager,Vice President,(I/C)India cements, Sankarnagar, Tirunelveli
 						</td>
-					  </tr>
-					  <tr>
+					</tr>
+					<tr>
 						<th scope="row">2</th>
 						<td>Secretary of the IMC</td>
-						<td>Mr.S.Arul 
+						<td>Mr.S.Arul
 						</td>
 						<td>Principal, Govt.I.T.I, Tiruchendur
 						</td>
-					  </tr>
-					</tbody>
-				  </table>
-				  <h3>Members Nominated by Ind. Partner	</h3>
-				  <table class="table table-bordered" style="background-color: white; color:black">
-					<thead>
-					  <tr>
+					</tr>
+				</tbody>
+			</table>
+			<h3>Members Nominated by Ind. Partner </h3>
+			<table class="table table-bordered" style="background-color: white; color:black">
+				<thead>
+					<tr>
 						<th scope="col">S.No</th>
 						<th scope="col">IMC</th>
 						<th scope="col">Name of member</th>
 						<th scope="col">Additional information about the member
 						</th>
-					  </tr>
-					</thead>
-					<tbody>
-					  <tr>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
 						<th scope="row">1</th>
 						<td>Member 1</td>
 						<td>Mr.Narayanasamy</td>
 						<td>Assistant General Manager (HR), India cements, Sankarnagar, Tirunelveli
 						</td>
-					  </tr>
-					  <tr>
+					</tr>
+					<tr>
 						<th scope="row">2</th>
 						<td>Member 2</td>
-						<td>Mr.K.Saravanamuthu </td>
-						<td>Deputy General Manager, (Power Plant) India cements, Sankarnagar, Tirunelveli
+						<td>Mr.C.Udhayan </td>
+						<td>Manager, (Power Plant) India cements, Sankarnagar, Tirunelveli
 						</td>
-					  </tr>
-					  <tr>
+					</tr>
+					<tr>
 						<th scope="row">2</th>
 						<td>Member 3</td>
 						<td>Mrs.Amutha Rajendran</td>
-						<td>Director ,Ganapathy Mills Ltd,                          
-							Sankar nagar, Tirunelveli							
+						<td>Director ,Ganapathy Mills Ltd,
+							Sankar nagar, Tirunelveli
 						</td>
-					  </tr>
-					</tbody>
-				  </table>
-				  <h3>Members nominated by State Govt</h3>
-				  <table class="table table-bordered" style="background-color: white; color:black">
-					<thead>
-					  <tr>
+					</tr>
+				</tbody>
+			</table>
+			<h3>Members nominated by State Govt</h3>
+			<table class="table table-bordered" style="background-color: white; color:black">
+				<thead>
+					<tr>
 						<th scope="col">S.No</th>
 						<th scope="col">IMC</th>
 						<th scope="col">Name of member</th>
 						<th scope="col">Additional information about the member
 						</th>
-					  </tr>
-					</thead>
-					<tbody>
-					  <tr>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
 						<th scope="row">1</th>
 						<td>Member 1</td>
-						<td>Mr.R. Rajakumar	</td>
-						<td>Regional Joint Director, Vannarapettai, Tirunelveli	</td>
-					  </tr>
-					  <tr>
+						<td>Mr.V. Selvakumar </td>
+						<td>Regional Joint Director, Vannarapettai, Tirunelveli </td>
+					</tr>
+					<tr>
 						<th scope="row">2</th>
 						<td>Member 2</td>
-						<td>Mrs.Petchiammal	</td>
-						<td>District Employment Officer, Korampallam, Tuticorin	</td>
-					  </tr>
-					  <tr>
+						<td>Mrs.Petchiammal </td>
+						<td>District Employment Officer, Korampallam, Tuticorin </td>
+					</tr>
+					<tr>
 						<th scope="row">3</th>
 						<td>Member 3</td>
-						<td>Mr.T.Kannan	</td>
+						<td>Mr.A.Swernalatha </td>
 						<td>General Manager, District Industry Centre, Tuticorin </td>
-					  </tr>
-					  <tr>
+					</tr>
+					<tr>
 						<th scope="row">4</th>
 						<td>Member 4</td>
-						<td>Mr.A.Sadasivan</td>
-						<td>Assisttant  Training Officer, Govt.I.T.I, Tiruchendur</td>
-					  </tr>
-					  <tr>
+						<td>Mr.K.Sivakutunathan</td>
+						<td>Assisttant Training Officer, Govt.I.T.I, Tiruchendur</td>
+					</tr>
+					<tr>
 						<th scope="row">5</th>
 						<td>Member 5</td>
-						<td>Subbulakshmi</td>
-						<td>Trainee  Govt.I.T.I, Tiruchendur		</td>
-					  </tr>
-					</tbody>
-				  </table>
-			</div>
+						<td>Anpuselvam</td>
+						<td>Trainee Govt.I.T.I, Tiruchendur </td>
+					</tr>
+					<tr>
+						<th scope="row">6</th>
+						<td>Member 6</td>
+						<td>T.Balabharathi</td>
+						<td>Trainee Govt.I.T.I, Tiruchendur </td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
+	</div>
 
 
-		<!-- footer start --> 
-		<footer id="footer">
-			<div class="subfooter">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<p class="text-center">Copyright © 2022. <a href="
-								http://www.govtititiruchendur.in" target="_blank">click here</a> by Tiruchendur Government ITI</p>
-						</div>
+	<!-- footer start -->
+	<footer id="footer">
+		<div class="subfooter">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<p class="text-center">Copyright © 2022. <a href="
+								http://www.govtititiruchendur.in" >click here</a> by Tiruchendur Government ITI</p>
 					</div>
 				</div>
 			</div>
-		</footer>
-		<!-- footer end -->
-		<!-- JavaScript --> 
-		<script type="text/javascript" src="plugins/jquery.min.js"></script>
-		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="plugins/modernizr.js"></script>
-		<script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
-		<script type="text/javascript" src="plugins/jquery.backstretch.min.js"></script>
-		<script type="text/javascript" src="plugins/jquery.appear.js"></script>
+		</div>
+	</footer>
+	<!-- footer end -->
+	<!-- JavaScript -->
+	<script type="text/javascript" src="plugins/jquery.min.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="plugins/modernizr.js"></script>
+	<script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
+	<script type="text/javascript" src="plugins/jquery.backstretch.min.js"></script>
+	<script type="text/javascript" src="plugins/jquery.appear.js"></script>
 
-		<!-- Custom Scripts -->
-		<script type="text/javascript" src="js/custom.js"></script>
+	<!-- Custom Scripts -->
+	<script type="text/javascript" src="js/custom.js"></script>
 
-	</body>
+</body>
+
 </html>
-
-
